# Are-You-Not-Entertained

./: .env.example  .gitignore  .pre-commit-config.yaml  DATA_COLLECTION_README.md  QUICK_START_NEW_PACKAGE.md  README.md  db_management.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  lint.yml  markdown-lint.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  security-audit.yml  security.yml  test.yml  type-check.yml
.gitlab/jobs/: docs.yml  lint.yml  markdown-lint.yml  security.yml  test.yml  type-check.yml
config/: config_loader.py
configs/: README.md  development.yaml  production.yaml  staging.yaml
data/: 00_base_data.csv  01_clean_data.csv  03_modeling_data.csv  0_base_data.csv  1.1_clean_data_no_revenue.csv  1.1_imputed_data_full.csv  1.2_imputed_data_no_revenue.csv  1.3.1_X_train_imputed.csv  1.3.2_X_test_imputed.csv  1.3.3_y_train.csv  1.3.4_y_test.csv  README.md  generate_tmdb_csv.py
data/artifacts/: X_train.csv  y_train.csv
data/omdb/: 01_omdb_movies.csv  Shawshank.json  The_Shawshank_Redemption.csv
data/processed/: 0_base_data.csv  1.2_imputed_data_no_revenue.csv  1.3.1_X_train_imputed.csv  1.3.2_X_test_imputed.csv  1.3.3_y_train.csv  1.3.4_y_test.csv
data/raw/: 0_base_data.csv
data/raw/tmdb/: 01_movie_ids.csv  tmdb_detailed_features.parquet  tmdb_discovered_2024_2024.parquet  tmdb_discovered_2024_2025.parquet
data/raw/tmdb/archive/: 02_movie_features.csv
data/tmdb/: 01_movie_ids.csv  02_movie_features.csv  movies.csv
data_collection/: omdb.py  the_numbers.py  tmdb.py
database/: db.py  db_utils.py  models.py  queries.py  utils.py
docs/: MIGRATION_CHECKLIST.md  MODERNIZATION_PLAN.md  OPTIMIZED_DATA_COLLECTION.md  RUNNING_SCRIPTS.md  index.md
docs/copilot_artifacts/: CONFIG_MIGRATION_GUIDE.md  CONFIG_MIGRATION_SUMMARY.md  CONFIG_QUICKSTART.md  DATA_COLLECTION_REFACTORING.md  DATA_GUIDE.md  DATA_MODERNIZATION_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  MODERNIZATION_PLAN.md  OPTIMIZED_DATA_COLLECTION.md  PATH_CONFIGURATION_MIGRATION.md  QUICK_REFERENCE_COLLECTION.md  QUICK_START_GUIDE.md  REFACTORING_SUMMARY.md  RUNNING_SCRIPTS.md  TECHNICAL_DECISIONS.md
docs/development/: code-style.md  formatting.md  linting.md  logging.md  markdown-linting.md  security.md  testing.md
docs/guides/: pre-commit-guide.md
docs/guides/vs-code/: vscode-configuraqtion.md  vscode_quickstart.md
docs/reference/: data-collection-workflow.md  database.md  omdb-client.md  orchestration.md  rate-limiting.md  refresh-strategy.md  tmdb-client.md
notebooks/: 00_testing.ipynb  01_movies_data_cleaning.ipynb  01_movies_data_full_imputation.ipynb  01_movies_data_preprocessing.ipynb  02_movies_EDA.ipynb  02_movies_feature_engineering.ipynb  03_movies_data_modeling_prep.ipynb  04_movies_data_modeling_prep.ipynb  04_movies_predictive_modeling.ipynb  testing.ipynb  tmdb_data_overview.ipynb
notebooks/archive/: 01_movies_data_preprocessing.ipynb
scripts/: collect_all_data.py  collect_omdb_data.py  collect_optimized.py  collect_tmdb_data.py  init_database.py  test_database.py  test_query_utils.py  test_utilities.py  update_db.py  validate_notebook_setup.py
src/: __init__.py  utils.py
src/ayne/: __init__.py  __main__.py
src/ayne/api/: __init__.py
src/ayne/cli/: __init__.py
src/ayne/core/: __init__.py  logging.py
src/ayne/core/config/: __init__.py  config_loader.py  settings.py
src/ayne/data_collection/: __init__.py  orchestrator.py  rate_limiter.py  refresh_strategy.py
src/ayne/data_collection/omdb/: __init__.py  client.py  models.py
src/ayne/data_collection/the_numbers/: scraper.py
src/ayne/data_collection/tmdb/: client.py
src/ayne/database/: duckdb_client.py  schema.sql
src/ayne/ml/: __init__.py
src/ayne/ml/models/: __init__.py  serialize.py
src/ayne/utils/: __init__.py  io.py  query_utils.py
src/core/: exceptions.py  paths.py
src/core/config/: __init__.py  config_loader.py  settings.py
src/data/: io.py  query_utils.py
src/data_collection/: __init__.py  omdb.py  orchestrator.py  rate_limiter.py  refresh_strategy.py  tmdb.py
src/data_collection/omdb/: __init__.py  client.py  models.py  normalizers.py
src/data_collection/the_numbers/: __init__.py  parser.py  scraper.py
src/data_collection/tmdb/: __init__.py  client.py  models.py  normalizers.py
src/data_preprocessing/: preprocess.py
src/database/: __init__.py  duckdb_client.py
src/db/: crud.py  engine.py  models.py
src/features/: feature_engineering.py
src/pipeline/: pipeline.py
src/utils/: model_io.py  utils.py
tests/: placeholder_test.py
